--- a/index.html
+++ b/index.html
@@ -1,102 +1,163 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <title>Socket.IO Chat</title>
 
-    <title>Socket.IO chat</title>
-
+    <!-- paleta: https://coolors.co/0d1821-344966-b4cded-f0f4ef-bfcc94 -->
     <style>
+        * {
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+          font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+          font-size: 18px;
+        }
+        
+        body {
+          height: 100vh;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          background-color: #0d1821;
+        }
 
-      body { margin: 0; padding-bottom: 3rem; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; }
+        #form {
+            background-color: #344966;
+            padding: 0.25rem;
+            display: flex;
+            min-height: 3rem;
+            backdrop-filter: blur(10px);
+        }
 
+        #input {
+            border: none;
+            padding: 0 1rem;
+            flex-grow: 1;
+            border-radius: 0.2rem;
+            margin: 0.25rem;
+            caret-color: #344966;
+            background-color: #f0f4ef;
+        }
 
+        #input:focus {
+            outline: none;
+        }
 
-      #form { background: rgba(0, 0, 0, 0.15); padding: 0.25rem; position: fixed; bottom: 0; left: 0; right: 0; display: flex; height: 3rem; box-sizing: border-box; backdrop-filter: blur(10px); }
+        #form > button {
+            background: #0d1821;
+            border: none;
+            padding: 0 1rem;
+            margin: 0.25rem;
+            border-radius: 0.2rem;
+            outline: none;
+            color: #f0f4ef;
+        }
+        #form > button:hover {
+          cursor: pointer;
+          opacity: 0.8;
+        }
 
-      #input { border: none; padding: 0 1rem; flex-grow: 1; border-radius: 2rem; margin: 0.25rem; }
+        #messages {
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            list-style-type: none;
+            padding: 0.5rem;
+            gap: 0.4rem;
+            overflow-y: auto;
+        }
 
-      #input:focus { outline: none; }
-
-      #form > button { background: #333; border: none; padding: 0 1rem; margin: 0.25rem; border-radius: 3px; outline: none; color: #fff; }
-
-
-
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-
-      #messages > li { padding: 0.5rem 1rem; background-color: #fff; }
-
-      /* #messages > li:nth-child(odd) { background: #efefef; } */
-
+        #messages > li {
+            padding: 0.5rem 1rem;
+            background-color: #b4cded;
+            border-radius: 0.2rem;
+        }
     </style>
 
   </head>
   <body>
+ 
+      <ul id="messages"></ul>
 
-    <ul id="messages"></ul>
+      <form id="form" action="">
+        <input id="input" autocomplete="off" /><button>Enviar</button>
+      </form>
 
-    <form id="form" action="">
+      <script src="/socket.io/socket.io.js"></script>
 
-      <input id="input" autocomplete="off" /><button>Send</button>
+      <script>
 
-    </form>
+          var socket = io()
 
-    <script src="/socket.io/socket.io.js"></script>
+          var nome = prompt('Qual seu nome?')
 
-    <script>
+          socket.emit('new user', nome)
 
-        var socket = io();
-
-        var nome = prompt('Qual seu nome?')
-
-        socket.emit('new user', nome)
-
-        socket.on('new user', (data) => {
-          if (data.success) {
-            alert('Bem-vindo ao chat, ' + nome + '!')
-          } else {
-            alert('Já existe um usuário com este nome.')
-            window.location.href = '/'
-          }
-        })
-
-        socket.on('welcome', (msg) => {
-            var item = document.createElement('li')
-            item.style.backgroundColor = 'yellow'
-            item.style.textAlign = 'center'
-            item.textContent = msg
-            messages.appendChild(item)
-            window.scrollTo(0, document.body.scrollHeight)
-        })
-
-        var messages = document.getElementById('messages')
-        var form = document.getElementById('form')
-        var input = document.getElementById('input')
-        input.focus()
-
-        form.addEventListener('submit', (e) => {
-            e.preventDefault()
-            if (input.value) {
-                socket.emit('chat message', {msg: input.value, nome: nome})
-                input.value = ''
+          socket.on('new user', (data) => {
+            if (data.success) {
+              // alert('Bem-vindo ao chat, ' + nome + '!')
+            } else {
+              alert('Já existe um usuário com este nome.')
+              window.location.href = '/'
             }
-        })
+          })
 
-        socket.on('chat message', (obj) => {
-          if (obj.nome == nome) {
-            var item = document.createElement('li')
-            item.style.backgroundColor = 'gray'
-            item.style.textAlign = 'right'
-            item.textContent = obj.msg
-            messages.appendChild(item)
-            window.scrollTo(0, document.body.scrollHeight)
-          } else {
-            var item = document.createElement('li')
-            item.textContent = obj.nome + ': '+ obj.msg
-            messages.appendChild(item)
-            window.scrollTo(0, document.body.scrollHeight)
-          }
-        })
+          socket.on('login', (msg) => {
+              var item = document.createElement('li')
+              item.style.backgroundColor = '#344966'
+              item.style.color = '#fff'
+              item.style.alignSelf = 'center'
+              item.textContent = msg
+              messages.appendChild(item)
+              window.scrollTo(0, document.body.scrollHeight)
+          })
 
-    </script>
+          socket.on('logout', (msg) => {
+              var item = document.createElement('li')
+              item.style.backgroundColor = '#344966'
+              item.style.color = '#fff'
+              item.style.alignSelf = 'center'
+              item.textContent = msg
+              messages.appendChild(item)
+              window.scrollTo(0, document.body.scrollHeight)
+          })
 
+          var messages = document.getElementById('messages')
+          var form = document.getElementById('form')
+          var input = document.getElementById('input')
+          input.focus()
+
+          form.addEventListener('submit', (e) => {
+              e.preventDefault()
+              if (input.value) {
+                  socket.emit('chat message', {msg: input.value, nome: nome})
+                  input.value = ''
+              }
+          })
+
+          socket.on('chat message', (obj) => {
+            if (obj.nome == nome) {
+              var item = document.createElement('li')
+              item.style.backgroundColor = '#f0f4ef'
+              item.style.alignSelf = 'end'
+              item.textContent = obj.msg
+              messages.appendChild(item)
+              window.scrollTo(0, document.body.scrollHeight)
+            } else {
+              var item = document.createElement('li')
+              item.textContent = obj.nome + ': '+ obj.msg
+              messages.appendChild(item)
+              window.scrollTo(0, document.body.scrollHeight)
+            }
+          })
+
+      </script>
   </body>
 </html>
