feat: inserção imagem fundo e ajuste

--- a/index.html
+++ b/index.html
@@ -26,17 +26,25 @@
           display: flex;
           flex-direction: column;
           justify-content: space-between;
+          background-image: url("http://192.168.15.172:8080/fundo.png");
+          background-size: contain;
           background-color: #0d1821;
         }
 
-        #form {
-            background-color: #344966;
-            padding: 0.25rem;
-            display: flex;
-            min-height: 3rem;
-            backdrop-filter: blur(10px);
+        #fundo {
+          width: 100%;
+          max-height: 100%;
+          background-clip: content-box;
         }
 
+        #form {
+          background-color: transparent;
+          padding: 0.5rem;
+          display: flex;
+          min-height: 4rem;
+          backdrop-filter: blur(10px);
+        }
+        
         #input {
             border: none;
             padding: 0 1rem;
@@ -52,7 +60,7 @@
         }
 
         #form > button {
-            background: #0d1821;
+            background: #344966;
             border: none;
             padding: 0 1rem;
             margin: 0.25rem;
@@ -87,7 +95,7 @@
 
   </head>
   <body>
- 
+    
       <ul id="mensagens"></ul>
 
       <form id="form" action="">
