--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           padding: 0.5rem;
           display: flex;
           min-height: 4rem;
-          backdrop-filter: blur(10px);
+          backdrop-filter: blur(0.625rem);
         }
         
         #input {
