feat: estilização barra de rolagem

--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
         #mensagens > span {
             margin-top: 0.2rem;
         }
+
+        ::-webkit-scrollbar {
+            width: 0.3rem;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #344966;
+            border-radius: 0.2rem;
+        }
     </style>
 
   </head>
