--- a/index.html
+++ b/index.html
@@ -23,10 +23,46 @@
             height: 100vh;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
             background-image: url("http://192.168.15.172:8080/fundo.png");
             background-size: contain;
             background-color: #0d1821;
+        }
+
+        header {
+            display: flex;
+            width: 100%;
+            padding: 0.5rem 0.75rem;
+            gap: 0.8rem;
+            background-color: transparent;
+            backdrop-filter: blur(0.8rem);
+            box-shadow: 0 0 1em #0a0a0a;
+        }
+        #infos-grupo {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 0.2rem;
+        }
+        #nome-grupo {
+            color: #f0f4ef;
+        }
+        #integrantes-grupo {
+            color: #b3b3b3;
+            font-size: 14px;
+        }
+        
+        #fundo-icone {
+            width: 3rem;
+            height: 3rem;
+            display: flex;
+            background-color: #4a4a4a;
+            align-items: center;
+            justify-content: center;
+            border-radius: 50%;
+        }
+        #icone {
+            font-size: 1.3rem;
+            color: #b3b3b3;
         }
 
         #form {
@@ -70,6 +106,7 @@
 
         #mensagens {
             display: flex;
+            flex-grow: 1;
             flex-direction: column;
             align-items: start;
             list-style-type: none;
@@ -99,6 +136,16 @@
 
   </head>
   <body>
+      <header>
+          <div id="fundo-icone">
+              <i id="icone" class="fas fa-user-friends"></i>
+          </div>
+          <div id="infos-grupo">
+              <h2 id="nome-grupo">Grupo 1</h2>
+              <p id="integrantes-grupo">Você, magrao, lp</p>
+          </div>
+      </header>
+      
       <ul id="mensagens"></ul>
 
       <form id="form" action="">
